crates/pgls_pretty_print/tests/snapshots/multi/tests__money_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/money.sql
snapshot_kind: text
---
create table money_data (m money);

insert into money_data values ('123');

select * from money_data;

select m + '123' from money_data;

select m + '123.45' from money_data;

select m - '123.45' from money_data;

select m / cast('2' as money) from money_data;

select m * 2 from money_data;

select 2 * m from money_data;

select m / 2 from money_data;

select m * cast(2 as smallint) from money_data;

select cast(2 as smallint) * m from money_data;

select m / cast(2 as smallint) from money_data;

select m * cast(2 as bigint) from money_data;

select cast(2 as bigint) * m from money_data;

select m / cast(2 as bigint) from money_data;

select m * cast(2 as double precision) from money_data;

select cast(2 as double precision) * m from money_data;

select m / cast(2 as double precision) from money_data;

select m * cast(2 as real) from money_data;

select cast(2 as real) * m from money_data;

select m / cast(2 as real) from money_data;

select m = '$123.00' from money_data;

select m <> '$124.00' from money_data;

select m <= '$123.00' from money_data;

select m >= '$123.00' from money_data;

select m < '$124.00' from money_data;

select m > '$122.00' from money_data;

select m = '$123.01' from money_data;

select m <> '$123.00' from money_data;

select m <= '$122.99' from money_data;

select m >= '$123.01' from money_data;

select m > '$124.00' from money_data;

select m < '$122.00' from money_data;

select cashlarger(m, '$124.00') from money_data;

select cashsmaller(m, '$124.00') from money_data;

select cash_words(m) from money_data;

select cash_words(m + '1.23') from money_data;

delete from money_data;

insert into money_data values ('$123.45');

select * from money_data;

delete from money_data;

insert into money_data values ('$123.451');

select * from money_data;

delete from money_data;

insert into money_data values ('$123.454');

select * from money_data;

delete from money_data;

insert into money_data values ('$123.455');

select * from money_data;

delete from money_data;

insert into money_data values ('$123.456');

select * from money_data;

delete from money_data;

insert into money_data values ('$123.459');

select * from money_data;

select cast('1234567890' as money);

select cast('12345678901234567' as money);

select cast('123456789012345678' as money);

select cast('9223372036854775807' as money);

select cast('-12345' as money);

select cast('-1234567890' as money);

select cast('-12345678901234567' as money);

select cast('-123456789012345678' as money);

select cast('-9223372036854775808' as money);

select cast('(1)' as money);

select cast('($123,456.78)' as money);

select pg_input_is_valid('\x0001', 'money');

select * from pg_input_error_info('\x0001', 'money');

select pg_input_is_valid('192233720368547758.07', 'money');

select * from pg_input_error_info('192233720368547758.07', 'money');

select cast('-92233720368547758.08' as money);

select cast('92233720368547758.07' as money);

select cast('-92233720368547758.09' as money);

select cast('92233720368547758.08' as money);

select cast('-92233720368547758.085' as money);

select cast('92233720368547758.075' as money);

select cast('878.08' as money) / cast(11 as double precision);

select cast('878.08' as money) / cast(11 as real);

select cast('878.08' as money) / cast(11 as bigint);

select cast('878.08' as money) / cast(11 as int);

select cast('878.08' as money) / cast(11 as smallint);

select cast('90000000000000099.00' as money) / cast(10 as bigint);

select cast('90000000000000099.00' as money) / cast(10 as int);

select cast('90000000000000099.00' as money) / cast(10 as smallint);

select cast(1234567890 as money);

select cast(12345678901234567 as money);

select cast(-12345 as money);

select cast(-1234567890 as money);

select cast(-12345678901234567 as money);

select cast(cast(1234567890 as int) as money);

select cast(cast(12345678901234567 as bigint) as money);

select cast(cast(12345678901234567 as numeric) as money);

select cast(cast(-1234567890 as int) as money);

select cast(cast(-12345678901234567 as bigint) as money);

select cast(cast(-12345678901234567 as numeric) as money);

select cast(cast('12345678901234567' as money) as numeric);

select cast(cast('-12345678901234567' as money) as numeric);

select cast(cast('92233720368547758.07' as money) as numeric);

select cast(cast('-92233720368547758.08' as money) as numeric);

select cast('92233720368547758.07' as money) + cast('0.01' as money);

select cast('-92233720368547758.08' as money) - cast('0.01' as money);

select cast('92233720368547758.07' as money) * cast(2 as double precision);

select cast('-1' as money) / cast(1.175494e-38 as real);

select cast('92233720368547758.07' as money) * cast(2 as int);

select cast('1' as money) / cast(0 as smallint);

select cast('42' as money) * cast('inf' as double precision);

select cast('42' as money) * cast('-inf' as double precision);

select cast('42' as money) * cast('nan' as real);
