crates/pgls_pretty_print/tests/snapshots/multi/tests__numa_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/numa_100.sql
snapshot_kind: text
---
SELECT NOT pg_numa_available() AS skip_test;

SELECT COUNT(*) = 0 AS ok FROM pg_shmem_allocations_numa;

SELECT COUNT(*) >= 0 AS ok FROM pg_shmem_allocations_numa;
